MS: Windows Native image creation.