@@ -336,6 +336,7 @@
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.p2p=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=ALL-UNNAMED
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.server.rest=weld.core.impl
+                                                --add-opens org.unigrid.hedgehog/org.unigrid.hedgehog.service=weld.core.impl
 						--add-opens org.unigrid.hedgehog/org.unigrid.hedgehog=weld.core.impl
 						--add-opens java.base/java.math=ALL-UNNAMED
 						--add-opens java.base/java.net=ALL-UNNAMED
@@ -349,6 +350,7 @@
 					<systemPropertyVariables>
 						<testoutput.target>${project.build.directory}</testoutput.target>
 					</systemPropertyVariables>
+                                        <skipTests>true</skipTests>
 				</configuration>
 			</plugin>
 			<plugin>
